# example-projects

./: .gitignore  README.md  cargo.toml  go.work  go.work.sum
cloud/aws-localstack-example/: .gitignore  README.md  data.json  docker-compose.yml  main-node.sh  main-s3.sh
deno/oak-knex-example/: Makefile  deps.ts  example.ts  mod.ts  package.json
deno/opine-knex-example/: mod.ts  package-lock.json
express-api/: package.json
fastapi-api/: app.py  notes.py
fastify-api/: package-lock.json  server.js
fastify-api/middleware/: say-hello.js
flask-api/: README.md
flask-api/lib/: hello.py
flask-api/middleware/: auth.py
fsharp/FalcoSqlkataExample/: FalcoSqlkataExample.sln  justfile
gleam/wisp_cake_pgo_example/: Justfile  gleam.toml  manifest.toml
gleam/wisp_pgo_example/: Justfile  gleam.toml  manifest.toml
go/: go.work  go.work.sum
go-fasthttp/: main.go
go-gin/: README.md  main.go
go-gorilla/: README.md
go-gqlgen-pg-gin/: README.md  go.mod  main.go
go-gqlgen-pg-gin/graph/: resolver.go
go-gqlgen-pg-gin/providers/: providers.go
go-graphql-mongodb/: README.md  go.mod  go.sum  main.go
go-graphql-mongodb/providers/: providers.go
go-mongo-practice/: README.md  main.go
go-pg-practice/: README.md
go/chi-squirrel-example/: go.mod  go.sum  main.go
go/echo-squirrel-example/: README.md  go.mod  go.sum  main.go
go/fiber-squirrel-example/: go.mod  (+3 more)
hapi-api/: server.js
koa-api/: server.js
nodejs-express/: README.md  package-lock.json  server.js
nodejs-fastify/: package.json
nodejs-hapi/: README.md  server.js
nodejs-koa/: README.md  package-lock.json  package.json  server.js
nodejs-polka/: package.json  server.js
py/fastapi-sqlalchemy-example/: README.md  example.py  justfile  main.py  pyproject.toml
py/fastapi-sqlalchemy-example/src/api/: jutsu.py  ninja.py
py/fastapi-sqlalchemy-example/src/db/: providers.py
py/fastapi-sqlalchemy-example/src/db/pg/: pgdal.py
py/fastapi-sqlalchemy-example/src/types/: types.py
py/fastapi-sqlalchemy-example/src/utils/: net.py
python-fastapi-ariadne-orator/: Makefile  main.py
python-pymongo/: main.py
python-sqlalchemy/: README.md
react-chartjs/: README.md  package-lock.json  package.json
react-d3/: README.md  package.json
react-nextjs-express-d3/: README.md  package.json  server.js
react-recharts/: package-lock.json
react-redux-saga-reduxsauce/: package-lock.json
rs-iron/: Cargo.toml  README.md
rs-nickel/: Cargo.toml  README.md
rs-rocket/: README.md
rs-warp/: Cargo.toml
rs/actix-postgres-example/: Cargo.toml  Makefile  README.md
rs/actix-postgres-example/src/: example.rs  main.rs
rs/actix-postgres-example/src/api/: mod.rs
rs/actix-postgres-example/src/api/jutsu/: mod.rs
rs/actix-postgres-example/src/api/ninja/: mod.rs
rs/actix-postgres-example/src/providers/: mod.rs
rs/actix-postgres-example/src/providers/pg/: mod.rs
rs/actix-seaquery-example/: Cargo.toml  Justfile  README.md
rs/actix-seaquery-example/src/: example.rs  main.rs
rs/actix-seaquery-example/src/api/: mod.rs
rs/actix-seaquery-example/src/api/jutsu/: mod.rs
rs/actix-seaquery-example/src/api/ninja/: mod.rs
rs/actix-seaquery-example/src/providers/: mod.rs
rs/actix-seaquery-example/src/types/: ninja.rs
rs/async-graphql-warp-postgres-example/: Cargo.toml  Justfile  README.md  example.js
rs/async-graphql-warp-postgres-example/src/api/: mod.rs
rs/async-graphql-warp-postgres-example/src/api/graphql/: mod.rs
rs/async-graphql-warp-postgres-example/src/api/jutsu/: mod.rs
rs/async-graphql-warp-postgres-example/src/api/ninja/: mod.rs
rs/async-graphql-warp-postgres-example/src/providers/: mod.rs
rs/async-graphql-warp-postgres-example/src/providers/pg/: helpers.rs  mod.rs
rs/async-graphql-warp-postgres-example/src/types/: mod.rs
rs/axum-postgres-example/: Cargo.toml  Makefile  README.md
rs/axum-postgres-example/src/: example.rs  main.rs
rs/axum-postgres-example/src/api/: mod.rs
rs/axum-postgres-example/src/api/jutsu/: mod.rs
rs/axum-postgres-example/src/api/ninja/: mod.rs
rs/axum-postgres-example/src/providers/pg/: mod.rs
rs/gotham-postgres-example/: Cargo.toml  README.md
rs/gotham-postgres-example/src/: main.rs
rs/gotham-postgres-example/src/api/: mod.rs
rs/gotham-postgres-example/src/api/jutsu/: mod.rs
rs/gotham-postgres-example/src/api/middleware/: mod.rs
rs/gotham-postgres-example/src/api/ninja/: mod.rs
rs/gotham-postgres-example/src/providers/: mod.rs
rs/gotham-postgres-example/src/providers/pg/: helpers.rs  mod.rs
rs/juniper-warp-postgres-example/: Cargo.toml  README.md  example.js  package-lock.json  package.json
rs/juniper-warp-postgres-example/src/: example.rs  main.rs
rs/juniper-warp-postgres-example/src/api/: mod.rs
rs/juniper-warp-postgres-example/src/api/graphql/: mod.rs
rs/juniper-warp-postgres-example/src/api/jutsu/: mod.rs
rs/juniper-warp-postgres-example/src/api/ninja/: mod.rs
rs/juniper-warp-postgres-example/src/providers/pg/: helpers.rs
rs/juniper-warp-postgres-example/src/types/: graphql.rs  mod.rs
svelte-d3/: postcss.config.js  rollup.config.js  svelte.config.js
svelte-sapper-d3/: package-lock.json
ts-express/: package-lock.json  package.json  server.js  server.js.map  server.ts  tsconfig.json
ts-express-graphql-knex-bookshelf/: README.md  dev.env  index.ts  package-lock.json  package.json  types.ts
ts-fastify/: server.ts
ts-koa/: README.md  server.ts  tsconfig.json
ts-next/: package-lock.json  package.json  server.ts  tsconfig.server.json
ts-next-base/: README.md
ts-next-express-base/: nodemon.json
ts-next-graphql/: .babelrc  package-lock.json
ts-nuxt-express-base/: README.md  tailwind.config.ts  tsconfig.json
vue--nuxt-base/: nuxt.config.js  package-lock.json
vue--nuxt-express/: nuxt.config.js  package.json
vue--vuex-and-vue-router/: package-lock.json  package.json
vue-nuxt-base/: README.md  package.json
vue-nuxt-express-base/: README.md  nuxt.config.js  package-lock.json  package.json
vue-nuxt-express-d3/: nuxt.config.js  package-lock.json  package.json
vue-vuex-and-vue-router/: README.md
(+707 files in other folders)
