[project]
name = 'fastapi-sqlalchemy-notes'
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.5",
    "granian>=1.6.3",
    "httpx>=0.27.2",
    "hypercorn>=0.17.3",
    "psycopg2>=2.9.10",
    # uv add "sqlalchemy[asyncio]"
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn>=0.32.1",
]

[tool.uv]
dev-dependencies = ["ruff", "pylint"]

[tool.ruff.lint]
extend-select = [
    "I",
    "W",
    "E",
    "D",
    "UP",
    "B",
    "SIM",
    "F",
    "S",
    "A",
    "C4",
    "ISC",
    "TCH",
    "PTH",
    "PL",
    "PERF",
    "FURB",
    # "RUF",
]

[tool.pyright]
typeCheckingMode = "basic"
