[package]
name = "async-graphql-warp-postgres-example"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
async-graphql = { version = "3.0", features = ["uuid", "chrono"]}
async-graphql-warp = "3.0"
warp = "0.3"
hyper = "0.14.30"
postgres = { version = "0.19" }
tokio = { version = "1.39.2", features = ["full"] }
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4", "with-uuid-0_8"]}
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
chrono = { version = "0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
async-trait = "0.1.81"
uuid = { version = "0.8.2", features = ["serde"]}
anyhow = "1.0.86"
mime = "0.3.17"
reqwest = { version = "0.11.27", features = ["json"]}
env_logger = "0.9.3"

[[bin]]
name = "main"
path = "src/main.rs"

# [[bin]]
# name = "example"
# path = "src/example.rs"