[package]
name = "axum-postgres-example"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
axum = "0.6.20"
postgres = { version = "0.19" }
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.29", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
async-trait = "0.1.51"
tokio-postgres = { version = "0.7.5", features = [
    "with-chrono-0_4",
    "with-uuid-0_8",
] }
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
uuid = { version = "0.8.2", features = ["serde"] }
anyhow = "1.0.45"
mime = "0.3"
reqwest = { version = "0.11", features = ["json"] }
env_logger = "0.9.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "example"
path = "src/example.rs"
