[package]
name = "gotham-postgres-example"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
futures = "0.3.17"
gotham = "0.6.0"
gotham_derive= "0.6.0"
postgres = { version = "0.19" }
chrono = { version = "0.4", features = ["serde"]}
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
async-trait = "0.1.51"
tokio-postgres = { version = "0.7.5", features = ["with-chrono-0_4", "with-uuid-0_8"]}
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
uuid = { version = "0.8.2", features = ["serde"]}
anyhow = "1.0.45"
mime = "0.3.16"
reqwest = { version = "0.11.6", features = ["json"]}
log = "0.4.6"
env_logger = "0.9.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "example"
path = "src/example.rs"