[package]
name = "juniper-warp-postgres-example"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
juniper = { version = "0.15.7" }
juniper_warp = { version = "0.7.0" }
warp = "0.3"
hyper = "0.14.13"
postgres = { version = "0.19" }
tokio = { version = "1.12.0", features = ["full"] }
tokio-postgres = { version = "0.7.5", features = ["with-chrono-0_4", "with-uuid-0_8"]}
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
chrono = { version = "0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
async-trait = "0.1.51"
uuid = { version = "0.8.2", features = ["serde"]}
anyhow = "1.0.45"
mime = "0.3.16"
reqwest = { version = "0.11.6", features = ["json"]}
env_logger = "0.9.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "example"
path = "src/example.rs"